errors.txt
ISSUES:
pxt-common-packages support for RefImage (really RefSImage)

- libs\base\gc.cpp

    void RefImage::scan(RefImage *t) {
        gcScan((TValue)t->buffer);
    }

    unsigned RefImage::gcsize(RefImage *t) {
        return SIZE(0);
    }

- libs\base\pxtbase.h

    // definition of RefImage
    // definition of mkImage

TODO: SImage_

/src/source/pointers.cpp:371:32: error: variable or field 'updateScreenStatusBar' declared void   
     void updateScreenStatusBar(SImage_ img);
                                ^
/src/source/pointers.cpp:371:32: error: 'SImage_' was not declared in this scope
/src/source/pointers.cpp:372:23: error: variable or field 'updateScreen' declared void
     void updateScreen(SImage_ img);
     
/src/source/pointers.cpp:741:18: error: 'updateScreenStatusBar' is not a member of 'pxt'
 (uint32_t)(void*)::pxt::updateScreenStatusBar,
                  ^
/src/source/pointers.cpp:742:18: error: 'updateScreen' is not a member of 'pxt'
 (uint32_t)(void*)::pxt::updateScreen,
                

TODO: Pin indirection in Arcade, not in Micro:bit. Need to address:

- Pin
- LOOKUP_PIN
- other missing functions


[5/6] Building CXX object source/CMakeFiles/pxt-microbit-app.dir/src/source/st7735/panic.cpp.o
FAILED: source/CMakeFiles/pxt-microbit-app.dir/src/source/st7735/panic.cpp.o
/opt/gcc-arm-none-eabi-5_4-2016q3/bin/arm-none-eabi-g++ -DYOTTA_MODULE_NAME=pxt-microbit-app -Dpxt_microbit_app_EXPORTS -Igenerated/include -I/src -I/src/yotta_modules/microbit -I/src/yotta_modules/microbit-dal -I/src/yotta_modules/mbed-classic -I/src/yotta_modules/ble -I/src/yotta_modules/ble-nrf51822 -I/src/yotta_modules/nrf51-sdk -I/src/yotta_modules/microbit/inc -I/src/yotta_modules/microbit-dal/inc/core -I/src/yotta_modules/microbit-dal/inc/types -I/src/yotta_modules/microbit-dal/inc/drivers -I/src/yotta_modules/microbit-dal/inc/bluetooth -I/src/yotta_modules/microbit-dal/inc/platform -I/src/yotta_modules/mbed-classic/api -I/src/yotta_modules/mbed-classic/hal -I/src/yotta_modules/mbed-classic/targets/hal -I/src/yotta_modules/mbed-classic/targets/cmsis -I/src/yotta_modules/ble-nrf51822/source/btle -I/src/yotta_modules/ble-nrf51822/source/btle/custom -I/src/yotta_modules/ble-nrf51822/source/common -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/ble_radio_notification -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/ble_services/ble_dfu -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/common -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/device_manager -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/device_manager/config -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/ble/peer_manager -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/device -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/drivers_nrf/ble_flash -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/drivers_nrf/delay -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/drivers_nrf/hal -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/drivers_nrf/pstorage -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/drivers_nrf/pstorage/config -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/bootloader_dfu -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/bootloader_dfu/hci_transport -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/crc16 -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/hci -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/scheduler -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/timer -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/util -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/fds -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/fstorage -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/libraries/experimental_section_vars -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/softdevice/common/softdevice_handler -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/softdevice/s130/headers -I/src/yotta_modules/nrf51-sdk/source/nordic_sdk/components/toolchain -I/src/yotta_modules/mbed-classic/targets -I/src/yotta_modules/mbed-classic/targets/cmsis/TARGET_NORDIC -I/src/yotta_modules/mbed-classic/targets/cmsis/TARGET_NORDIC/TARGET_MCU_NRF51822 -I/src/yotta_modules/mbed-classic/targets/cmsis/TARGET_NORDIC/TARGET_MCU_NRF51822/TOOLCHAIN_GCC_ARM -I/src/yotta_modules/mbed-classic/targets/cmsis/TARGET_NORDIC/TARGET_MCU_NRF51822/TOOLCHAIN_GCC_ARM/TARGET_MCU_NRF51_16K_S110 -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822 -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk/components -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk/components/libraries -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk/components/libraries/crc16 -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk/components/libraries/scheduler -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/nordic_sdk/components/libraries/util -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/s110_nrf51822_8_0_0 -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/Lib/s130_nrf51822_1_0_0 -I/src/yotta_modules/mbed-classic/targets/hal/TARGET_NORDIC/TARGET_MCU_NRF51822/TARGET_NRF51_MICROBIT -I/src/source -fno-exceptions -fno-unwind-tables -ffunction-sections -fdata-sections -Wall -Wextra -fno-rtti -fno-threadsafe-statics -mcpu=cortex-m0 -mthumb -D__thumb2__ -std=c++11 -fwrapv -Os -g -gdwarf-3 -DNDEBUG   -DTOOLCHAIN_GCC -DTOOLCHAIN_GCC_ARM -DMBED_OPERATORS -DNRF51 -DTARGET_NORDIC -DTARGET_M0 -D__MBED__=1 -DMCU_NORDIC_16K -DTARGET_NRF51_MICROBIT -DTARGET_MCU_NORDIC_16K -DTARGET_MCU_NRF51_16K_S110  -DTARGET_NRF_LFCLK_RC -DTARGET_MCU_NORDIC_16K -D__CORTEX_M0 -DARM_MATH_CM0 -include "/src/build/bbc-microbit-classic-gcc/yotta_config.h" -MMD -MT source/CMakeFiles/pxt-microbit-app.dir/src/source/st7735/panic.cpp.o -MF source/CMakeFiles/pxt-microbit-app.dir/src/source/st7735/panic.cpp.o.d -o source/CMakeFiles/pxt-microbit-app.dir/src/source/st7735/panic.cpp.o -c /src/source/st7735/panic.cpp
/src/source/st7735/panic.cpp:53:5: error: 'Pin' does not name a type
     Pin *sck, *mosi, *dc, *cs;
     ^

/src/source/st7735/panic.cpp: In function 'void _pxt_panic::busy_wait_us(int)':
/src/source/st7735/panic.cpp:154:22: error: 'target_wait_us' was not declared in this scope       
     target_wait_us(ms);
                      ^
/src/source/st7735/panic.cpp:191:23: error: 'DISPLAY_MOSI' was not declared in this scope
     mosi = LOOKUP_PIN(DISPLAY_MOSI);
                       ^
/src/source/st7735/panic.cpp:191:35: error: 'LOOKUP_PIN' was not declared in this scope
     mosi = LOOKUP_PIN(DISPLAY_MOSI);
                                 ^
/src/source/st7735/panic.cpp: In function 'void _pxt_panic::target_panic(int)':
/src/source/st7735/panic.cpp:272:24: error: 'target_disable_irq' was not declared in this scope   
     target_disable_irq(); // make sure they stay disabled in DMESG()
                        ^
/src/source/st7735/panic.cpp:293:27: error: 'LED' was not declared in this scope
     auto led = LOOKUP_PIN(LED);
